# sys-stats

./: Cargo.toml
src/: main.rs  metric.rs  monitor.rs  render.rs  taskbar.rs  util.rs  widget.rs  window.rs
src/monitor/: cpu.rs  gpu.rs  ram.rs  vram.rs
src/widget/: cpu.rs  gpu.rs  graph.rs  ram.rs  text.rs
