[package]
name = "sys-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = {
    version = "0.62",
    features = [
        "Win32_UI_Shell",
        "Win32_System_Com",
        "Win32_Foundation",
        "Win32_Graphics_Gdi",
        "Win32_UI_WindowsAndMessaging",
        "Win32_System_LibraryLoader",
        "Win32_UI_Accessibility"
    ]
}
