[package]
name = "sys-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = {
    version = "0.62",
    features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_System_LibraryLoader",
        "Win32_UI_Accessibility",
        "Win32_System_Com",

        # render
        "Win32_Graphics_Direct2D",
        "Win32_Graphics_DirectWrite",
        "Win32_Graphics_Direct2D_Common",
        "Win32_Graphics_Dxgi_Common",
        "Win32_Graphics_Gdi"
    ]
}
sysinfo = "0.39"
